--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
                     <h4>Vol. IV</h4>
                     <iframe src="https://open.spotify.com/embed/album/2gluD3lGruEr432nJtNFuS" width="100%" height="400" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
-
+                <div class="col-md-3 col-sm-6 col-xs-12 text-center">
+                    <h4>Vol. V</h4>
+                    <iframe src="https://open.spotify.com/embed/album/6Kt5xLdBZ5G1QTVjsMwfc1" width="100%" height="400" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
             </div>
         </div>
     </div>
